[metadata]
name = scikit-fibers
version = 0.9.3
author = Ryan Urbanowicz & Harsh Bandhey
author_email = ryan.urbanowicz@cshs.org and harsh.bandhey@cshs.org
description = A Scikit Learn compatible implementation of FIBERS Algorithm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UrbsLab/scikit-FIBERS
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
python_requires = >=3.6
install_requires =
    numpy
    pandas
    scikit-learn
    lifelines
    matplotlib
    seaborn
    pytest
    tqdm

[options.packages.find]
where = src
